2009-08-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el (get-free-disk-space): Use / for default-directory.

	* textmodes/ispell.el (ispell-accept-output, ispell-command-loop):
	Use with-current-buffer.

	* emacs-lisp/bytecomp.el (byte-compile-const-symbol-p):
	Recognize immutable variables like most-positive-fixnum.
	(byte-compile-setq-default): Check and warn if trying to assign
	to an immutable variable, or a non-variable.

	* progmodes/cc-vars.el (c-comment-continuation-stars):
	* progmodes/cc-engine.el (c-looking-at-bos):
	* progmodes/cc-cmds.el (c-toggle-auto-state)
	(c-forward-into-nomenclature, c-backward-into-nomenclature)
	(c-comment-line-break-function): Add version of obsolescence.

2009-08-28  Juri Linkov  <juri@jurta.org>

	* files.el (magic-fallback-mode-alist): Add ZIP magic number
	associated with `archive-mode'.

	* image.el (image-type-header-regexps): Use only JPEG magic number
	to determine JPEG images, and don't use `image-jpeg-p' because
	Emacs can display non-JFIF non-Exif JPEG images.

2009-08-28  Juanma Barranquero  <lekktu@gmail.com>

	* arc-mode.el (archive-mode):
	* emacs-lisp/re-builder.el (re-builder-unload-function):
	Protect against the default value of `major-mode' being nil.

2009-08-28  Juanma Barranquero  <lekktu@gmail.com>

	* international/ucs-normalize.el (ucs-normalize-sort, quick-check-list):
	Fix typos in docstrings.

	* progmodes/js.el (js--macro-decl-re): Doc fix.
	(js--plain-method-re, js--split-name): Refloc docstring.
	(js--class-styles, js--make-merged-item, js--splice-into-items):
	Fix typos in docstrings; reflow docstrings.
	(js--maybe-join, js--function-prologue-beginning, js--flush-caches)
	(js--variable-decl-matcher, js--inside-pitem-p)
	(js--parse-state-at-point, js--get-all-known-symbols)
	(js--symbol-history, js-find-symbol, js--js-references)
	(js--moz-interactor, js--js-encode-value, js--read-tab):
	Fix typos in docstrings.

2009-08-28  Stefan Monnier  <monnier@iro.umontreal.ca>
